Adds correct file naming as well as ejs for allprints and my prints model

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/header') %>
 
-<h2>Home Page</h2>
+
+<h3>Welcome to our 3D Print Log. Please sign in with your Google Account and we will begin our journey! </h3>
+<h5>Please feel free to leave comments on GitHub about features you would like to see implemented :)</h5>
 
 <%- include('./partials/footer') %>
