--- a/views/prints/allprints.ejs
+++ b/views/prints/allprints.ejs
@@ -1,22 +1,5 @@
 <%- include('../partials/header') %>
 
-<table id="list">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Release<br>Year</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% movies.forEach(function(m) { %>
-      <tr>
-        <td><%= m.title %></td>
-        <td><%= m.releaseYear %></td>
-        <td><a href="/movies/<%= m._id %>">DETAILS</a></td>
-      </tr>
-      <% }); %>
-    </tbody>
-  </table>
+<h1>All prints here</h1>
   
 <%- include('../partials/footer') %>
