Reverts back to the previous commit

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,8 +9,7 @@
         <a class="nav-link" href="/">Home</a>
         <% if (user) { %>
           <a class="nav-link" href="/logout">Log Out</a>
-          <a class="all-prints" href="/prints/all">All Prints</a>
-          <a class="new-prints" href="/prints/new">Add Print</a>
+          <a class="all-prints" href="/show">All Prints</a>
           <% } else { %>
             <a class="nav-link" href="/auth/google">Log In</a>
             <% } %>
