--- a/views/prints/new.ejs
+++ b/views/prints/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<form id="new-form" action="/print" method="POST">
+<form id="new-form" action="/prints" method="POST">
   <label>Title:</label>
   <input type="text" name="title">
   <label>Start Date</label>
