--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,8 +9,8 @@
         <a class="nav-link" href="/">Home</a>
         <% if (user) { %>
           <a class="nav-link" href="/logout">Log Out</a>
-          <a class="all-prints" href="/prints/aprints">All Prints</a>
-           <a class="new-prints" href="/prints/new">Add Prints</a>
+          <a class="nav-link" href="/prints/aprints">All Prints</a>
+           <a class="nav-link" href="/prints/new">Add Prints</a>
           <% } else { %>
             <a class="nav-link" href="/auth/google">Log In</a>
             <% } %>
