--- a/views/prints/aprints.ejs
+++ b/views/prints/aprints.ejs
@@ -18,11 +18,11 @@
         <td><%= print.endDate.toLocaleString('en-US', { timeZone: 'UTC' }) %></td>
         <td><%= print.comments %></td>
         <td>
-            <a id="deatailsButton" href="/prints/<%= print._id %>">DETAILS</a>
+            <a id="deatailsButton" type="submit" class="btn btn-success btn-sm"   href="/prints/<%= print._id %>">DETAILS</a>
         </td>
         <td>
             <form action="/prints/<%= print._id %>?_method=DELETE" method="POST" class="delete-form">
-                <button id="submitButton" type="submit">Delete</button>
+                <button id="submitButton" type="submit" class="btn btn-danger btn-sm">Delete</button>
           </form>
         </td>
       </tr>
