--- a/views/prints/new.ejs
+++ b/views/prints/new.ejs
@@ -1,15 +1,25 @@
 <%- include('../partials/header') %>
 
-<form id="new-form" action="/prints" method="POST">
-  <label>Title:</label>
-  <input type="text" name="title">
-  <label>Start Date</label>
-  <input type="datetime-local" name="startDate">
-  <label>End Date</label>
-  <input type="datetime-local" name="endDate">
-  <label>Comments</label>
-  <input type="text" name="comments">
-  <input type="submit" value="Add Print">
-</form>
+<div class="container">
+  <form id="new-form" action="/prints" method="POST">
+    <div class="form-group">
+      <label for="title">Title:</label>
+      <input type="text" class="form-control" id="title" name="title">
+    </div>
+    <div class="form-group", class="d-grid gap-2">
+      <label for="startDate">Start Date:</label>
+      <input type="datetime-local" class="form-control" id="startDate" name="startDate">
+    </div>
+    <div class="form-group">
+      <label for="endDate">End Date:</label>
+      <input type="datetime-local" class="form-control" id="endDate" name="endDate">
+    </div>
+      <label for="comments">Comments:</label>
+      <input type="text" class="form-control" id="comments" name="comments">
+    </div>
+    <button type="submit" class="btn btn-warning"  >Add Print</button>
+  </form>
+</div>
+
 
 <%- include('../partials/footer') %>
