Adds non-working review function

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,19 @@
 
-    span {
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      position: fixed;
-      bottom: 0;
-    }
+span {
+   display: flex;
+   justify-content: center;
+   align-items: flex-end;
+   position: fixed;
+   bottom: 0;
+}
+#homepageImg {
+  max-width: 800px;
+  max-height: 650px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#designedBy {
+  color: rgb(2, 71, 23);
+  font-size: large;
+}
