--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 
 
-<h3>Welcome to our 3D Print Log. Please sign in with your Google Account and we will begin our journey! </h3>
-<h5>Please feel free to leave comments on GitHub about features you would like to see implemented :)</h5>
-
+<h3 id="homepageImg">Welcome to our 3D Print Log. Please sign in with your Google Account and we will begin our journey! </h3>
+<h5 id="homepageImg">Please feel free to take a quick 2 question survey below. Your feedback is invaluable  :) <br>[https://forms.gle/t2nJhSdWQVt4q15Z9]</h5>
+<img id="homepageImg" src="https://img.freepik.com/free-vector/3d-printing-technology_1319-117.jpg?w=740&t=st=1689719954~exp=1689720554~hmac=7b3d8ac5a6ab47d1fe9ccb32bb37d684a4f3639418e1ed1c30ce2af042afb7cd"
 <%- include('./partials/footer') %>
