--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
   </div>
   </main>
-  <span>Designed by Dale Desrochers</span>
+  <span id="designedBy">Designed by Dale Desrochers</span>
 </body>
 </html>
