--- a/views/prints/details.ejs
+++ b/views/prints/details.ejs
@@ -12,4 +12,52 @@
     <%= print.comments %></div>
 </section>
 
+<br><br><h2>Reviews</h2>
+<% if (user) { %>
+<form id="add-review-form" method="POST"
+  action="/prints/<%= print._id %>/review">
+  <textarea name="content"></textarea>
+  <input type="submit" value="Add Review">
+</form>
+<% } %>
+
+<% if (print.reviews.length) { %>
+  <table>
+    <thead>
+      <tr>
+        <th>User</th>
+        <th>Date</th>
+        <th>Review</th>
+        <th>Rating</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% let total = 0 %>
+      <% print.reviews.forEach(function(r) { %>
+        <% total += print.rating %>
+        <tr>
+          <td class="review-user"><img alt="avatar" src="<%= print.userAvatar %>" referrerpolicy="no-referrer" ><%= r.userName %></td>
+          <td><%= print.createdAt.toLocaleDateString() %></td>
+          <td><%= print.content %></td>
+          <td><%= print.rating %></td>
+          <td>
+            <% if (user?._id.equals(print.user)) { %>
+              <form action="/reviews/<%= print._id %>?_method=DELETE" method="POST">
+                <button type="submit">Delete</button>
+              </form>
+            <% } %>
+          </td>
+        </tr>
+      <% }); %>
+      <tr>
+        <td colspan="3"></td>
+        <td><strong><%= (total / print.reviews.length).toFixed(1) %></strong></td>
+      </tr>
+    </tbody>
+  </table>
+<% } else { %>
+  <h5>No Reviews Yet</h5>
+<% } %>
+
 <%- include('../partials/footer') %>
