Adds working reviews functionality

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,3 +17,12 @@ span {
   color: rgb(2, 71, 23);
   font-size: large;
 }
+#submitButton {
+  margin-top: 10px;
+}
+
+.review-user img {
+  border-radius: 50%;
+  height: 45px;
+  margin-right: 10px;
+}
