--- a/views/prints/new.ejs
+++ b/views/prints/new.ejs
@@ -17,7 +17,7 @@
       <label for="comments">Comments:</label>
       <input type="text" class="form-control" id="comments" name="comments">
     </div>
-    <button type="submit" class="btn btn-warning">Add Print</button>
+    <button id= submitButton type="submit" class="btn btn-warning">Add Print</button>
   </form>
 </div>
 
