--- a/views/prints/details.ejs
+++ b/views/prints/details.ejs
@@ -26,24 +26,22 @@
     <thead>
       <tr>
         <th>User</th>
-        <th>Date</th>
         <th>Review</th>
-        <th>Rating</th>
+        <th>Date</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
       <% let total = 0 %>
       <% print.reviews.forEach(function(r) { %>
-        <% total += print.rating %>
+        <% total += r.rating %>
         <tr>
-          <td class="review-user"><img alt="avatar" src="<%= print.userAvatar %>" referrerpolicy="no-referrer" ><%= r.userName %></td>
-          <td><%= print.createdAt.toLocaleDateString() %></td>
-          <td><%= print.content %></td>
-          <td><%= print.rating %></td>
+          <td class="review-user"><img alt="avatar" src="<%= r.userAvatar %>" referrerpolicy="no-referrer" ><%= r.userName %></td>
+          <td><%= r.content %></td>
+          <td><%= r.createdAt.toLocaleDateString() %></td>
           <td>
-            <% if (user?._id.equals(print.user)) { %>
-              <form action="/reviews/<%= print._id %>?_method=DELETE" method="POST">
+            <% if (user?._id.equals(r.user)) { %>
+              <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
                 <button type="submit">Delete</button>
               </form>
             <% } %>
@@ -52,7 +50,6 @@
       <% }); %>
       <tr>
         <td colspan="3"></td>
-        <td><strong><%= (total / print.reviews.length).toFixed(1) %></strong></td>
       </tr>
     </tbody>
   </table>
