--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,13 @@
 <%- include('./partials/header') %>
 
-
-<h3 id="homepageImg">Welcome to our 3D Print Log. Please sign in with your Google Account and we will begin our journey! </h3>
-<h5 id="homepageImg">Please feel free to take a quick 2 question survey below. Your feedback is invaluable  :)</h5> <br>
-<a class="nav-link" href="https://forms.gle/t2nJhSdWQVt4q15Z9">Click Here for Survey!</a>
-<img id="homepageImg" src="https://img.freepik.com/free-vector/3d-printing-technology_1319-117.jpg?w=740&t=st=1689719954~exp=1689720554~hmac=7b3d8ac5a6ab47d1fe9ccb32bb37d684a4f3639418e1ed1c30ce2af042afb7cd"
+<div class="container">
+    <h1 class="display-4 text-center mt-2 mb-2">Welcome to your 3D Print Logger!</h1>
+    <h4 id="homepageImg">Sign in with your Google Account to begin our journey! </h4>
+    <h5 id="homepageImg">Please feel free to take a quick 2 question survey below.</h5> <strong id="homepageImg">Your feedback is invaluable :)</strong>
+    <a class="nav-link" id="homepageImg" id="survey" href=https://forms.gle/t2nJhSdWQVt4q15Z9">Click Here for Survey!</a>
+</div>
+<div>
+    <span>.</span>
+</div>
+<img id="homepageImg" src="https://img.freepik.com/free-vector/3d-printing-technology_1319-117.jpg?w=740&t=st=1689719954~exp=1689720554~hmac=7b3d8ac5a6ab47d1fe9ccb32bb37d684a4f3639418e1ed1c30ce2af042afb7cd">
 <%- include('./partials/footer') %>
