--- a/views/prints/aprints.ejs
+++ b/views/prints/aprints.ejs
@@ -1,21 +1,24 @@
 <%- include('../partials/header') %>
+<div class="container">
+        <h1 class="display-4 text-center mt-4 mb-2">All Logged Prints</h1>
+</div>
 
-<table id="list">
+<table id="list" class="table table-striped table-bordered mt-4">
   <thead>
     <tr>
-      <th>User</th>
+      <th>Picture</th>
       <th>Title</th>
       <th>Start Date</th>
       <th>End Date</th>
       <th>Comments</th>
-      
+      <th>Details</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <% prints.forEach((print) => { %>
       <tr>
-        <td>Placeholder for pic</td>
-        <!-- <td class="review-user"><img alt="avatar" src="<%= print.userAvatar %>" referrerpolicy="no-referrer" ><%= print.userName %></td> -->
+        <td><img id="printImg" src="<%= print.picture %>"></td>
         <td><%= print.title %></td>
         <td><%= print.startDate.toLocaleString('en-US', { timeZone: 'UTC' }) %></td>
         <td><%= print.endDate.toLocaleString('en-US', { timeZone: 'UTC' }) %></td>
@@ -25,7 +28,7 @@
         </td>
         <td>
             <form action="/prints/<%= print._id %>?_method=DELETE" method="POST" class="delete-form">
-                <button id="submitButton" type="submit" class="btn btn-danger btn-sm">Delete</button>
+                <button id="deatailsButton" type="submit" class="btn btn-danger btn-sm">Delete</button>
           </form>
         </td>
       </tr>
