--- a/views/prints/details.ejs
+++ b/views/prints/details.ejs
@@ -47,7 +47,7 @@
               <% print.reviews.forEach(function(r) { %>
 
                 <tr>
-                  <td class="review-user"><img alt="avatar" src="<%= r.userAvatar %>" referrerpolicy="no-referrer">
+                  <td class="review-user-container"><img alt="avatar" src="<%= r.userAvatar %>" referrerpolicy="no-referrer">
                     <%= r.userName %>
                   </td>
                   <td>
