--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,28 @@
 <%- include('./partials/header') %>
 
-<div class="container">
-    <h1 class="display-4  mt-2 mb-2">Welcome to your 3D Print Logger!</h1>
-    <h4 id="homepageImg">Sign in with your Google Account to begin our journey! </h4>
-    <h5 id="homepageImg">Please feel free to take a quick 2 question survey below.</h5> <strong id="homepageImg">Your feedback is invaluable :)</strong>
-    <a class="nav-link" id="homepageImg" id="survey" href=https://forms.gle/t2nJhSdWQVt4q15Z9">Click Here for Survey!</a>
+<div class="container" >
+  <h1 class="display-4 text-center mt-4 mb-2">
+    Welcome to your 3D Print Logger!
+  </h1>
+  <h4 class="text-center" >
+    Sign in with your Google Account to begin our journey!
+  </h4>
+  <h5 class="text-center" >
+    Please feel free to take a quick 2-question survey below. Your feedback is
+    invaluable :)
+  </h5>
+  <a class="nav-link text-center" id="survy" href=https://forms.gle/t2nJhSdWQVt4q15Z9"
+    >Click Here for Survey!</a
+  >
 </div>
-<div>
+
+<div class="img-container img-fluid mt-2">
+  <img
+    id="homepageImg"
+    src="https://img.freepik.com/free-vector/3d-printing-technology_1319-117.jpg?w=740&t=st=1689719954~exp=1689720554~hmac=7b3d8ac5a6ab47d1fe9ccb32bb37d684a4f3639418e1ed1c30ce2af042afb7cd"
+    class="img-fluid"
+    alt="3D Printing Technology"
+  />
 </div>
-<img id="homepageImg" src="https://img.freepik.com/free-vector/3d-printing-technology_1319-117.jpg?w=740&t=st=1689719954~exp=1689720554~hmac=7b3d8ac5a6ab47d1fe9ccb32bb37d684a4f3639418e1ed1c30ce2af042afb7cd">
+
 <%- include('./partials/footer') %>
