--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,21 +1,28 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">3D Print Log</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
         <% if (user) { %>
-          <a class="nav-link" href="/logout">Log Out</a>
-          <a class="nav-link" href="/prints/aprints">All Prints</a>
-           <a class="nav-link" href="/prints/new">Add Prints</a>
-          <% } else { %>
-            <a class="nav-link" href="/auth/google">Log In</a>
-            <% } %>
-          </div>
-        </div>
+        <a class="nav-link" href="/logout">Log Out</a>
+        <a class="nav-link" href="/prints/aprints">All Prints</a>
+        <a class="nav-link" href="/prints/new">Add Prints</a>
+        <% } else { %>
+        <a class="nav-link" href="/auth/google">Log In</a>
+        <% } %>
       </div>
-    </nav>
-    
+    </div>
+  </div>
+</nav>
