--- a/views/prints/aprints.ejs
+++ b/views/prints/aprints.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') %>
 <div class="container">
-        <h1 class="display-4 text-center mt-4 mb-2">All Logged Prints</h1>
+  <h1 class="display-4 text-center mt-4 mb-2">All Logged Prints</h1>
 </div>
-
+<div class="review-container">
 <table id="list" class="table table-striped table-bordered mt-4">
   <thead>
     <tr>
@@ -17,23 +17,41 @@
   </thead>
   <tbody>
     <% prints.forEach((print) => { %>
-      <tr>
-        <td><img id="printImg" src="<%= print.picture %>"></td>
-        <td><%= print.title %></td>
-        <td><%= print.startDate.toLocaleString('en-US', { timeZone: 'UTC' }) %></td>
-        <td><%= print.endDate.toLocaleString('en-US', { timeZone: 'UTC' }) %></td>
-        <td><%= print.comments %></td>
-        <td>
-            <a id="deatailsButton" type="submit" class="btn btn-success btn-sm"   href="/prints/<%= print._id %>">DETAILS</a>
-        </td>
-        <td>
-            <form action="/prints/<%= print._id %>?_method=DELETE" method="POST" class="delete-form">
-                <button id="deatailsButton" type="submit" class="btn btn-danger btn-sm">Delete</button>
-          </form>
-        </td>
-      </tr>
+    <tr>
+      <td><img id="printImg" src="<%= print.picture %>" /></td>
+      <td><%= print.title %></td>
+      <td>
+        <%= print.startDate.toLocaleString('en-US', { timeZone: 'UTC' }) %>
+      </td>
+      <td><%= print.endDate.toLocaleString('en-US', { timeZone: 'UTC' }) %></td>
+      <td><%= print.comments %></td>
+      <td>
+        <a
+          id="deatailsButton"
+          type="submit"
+          class="btn btn-success btn-sm"
+          href="/prints/<%= print._id %>"
+          >DETAILS</a
+        >
+      </td>
+      <td>
+        <form
+          action="/prints/<%= print._id %>?_method=DELETE"
+          method="POST"
+          class="delete-form"
+        >
+          <button
+            id="deatailsButton"
+            type="submit"
+            class="btn btn-danger btn-sm"
+          >
+            Delete
+          </button>
+        </form>
+      </td>
+    </tr>
     <% }); %>
   </tbody>
 </table>
-
+</div>
 <%- include('../partials/footer') %>
