Fixes survey link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     Please feel free to take a quick 2-question survey below. Your feedback is
     invaluable :)
   </h5>
-  <a class="nav-link text-center" id="survy" href=https://forms.gle/t2nJhSdWQVt4q15Z9"
+  <a class="nav-link text-center" id="survy" href=https://forms.gle/t2nJhSdWQVt4q15Z9
     >Click Here for Survey!</a
   >
 </div>
