Adds final styling and font

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
     <!-- BOOTSTRAP THEME CSS GOES INSIDE /stylesheets -->
     <link rel="stylesheet" href="/stylesheets/quartz.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
