--- a/views/prints/aprints.ejs
+++ b/views/prints/aprints.ejs
@@ -2,7 +2,7 @@
 <div class="container">
   <h1 class="display-4 text-center mt-4 mb-2">All Logged Prints</h1>
 </div>
-<div class="review-container">
+<div class="review-container" id="aTable">
 <table id="list" class="table table-striped table-bordered mt-4">
   <thead>
     <tr>
