--- a/views/prints/new.ejs
+++ b/views/prints/new.ejs
@@ -4,7 +4,7 @@
   <h1 class="display-4 text-center mt-3 mb-4">Create New Print</h1>
 </div>
 
-<div class="container">
+<div class="container" id="aTable">
   <form id="new-form" action="/prints" method="POST">
     <div class="form-group">
       <label for="title">Title:</label>
